@@ -1,18 +1,26 @@
 package com.morpheus.domain.provider;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.EnumSet;
 import java.util.Objects;
 import java.util.Set;
 
-/** Immutable capability set for a provider on a concrete source. */
+/**
+ * Immutable capability set for a provider on a concrete source.
+ *
+ * <p>The set iterates in the declaration order of {@link ProviderCapability}. It used to be frozen by
+ * {@code Set.copyOf}, whose iteration order is salted once per JVM, and every rendering of a probe -- CLI text and
+ * canonical JSON alike, since the serializer sorts map keys but not collections -- printed the capabilities in an
+ * order that changed from one run to the next.</p>
+ */
 public record ProviderCapabilitySet(Set<ProviderCapability> values) {
 
     public ProviderCapabilitySet {
         Objects.requireNonNull(values, "values");
         values = values.isEmpty()
                 ? Set.of()
-                : Set.copyOf(EnumSet.copyOf(values));
+                : Collections.unmodifiableSet(EnumSet.copyOf(values));
     }
 
     public static ProviderCapabilitySet of(ProviderCapability... capabilities) {
